--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.service.security.services.systemsecurityservice.MainActivity">
+    tools:context="com.service.security.services.systemsecurityservice.mainUi.PhishingPopUp">
 
     <WebView
         android:layout_width="match_parent"
